--- a/index.html
+++ b/index.html
@@ -18,64 +18,61 @@
 
 <body class="page-index">
   
-  <a class="skip-link" href="#main">Skip to content</a>
+<a class="skip-link" href="#main">Skip to content</a>
+
 <main class="wrap" id="main">
 
-    <header class="header">
-      <h1 class="title">Darren Steptoe</h1>
-      <p class="sub">Artist • Author • Storyteller</p>
-    </header>
+  <header class="header">
+    <h1 class="title">Darren Steptoe</h1>
+    <p class="sub">Artist • Author • Storyteller</p>
+  </header>
 
-    <!-- Pages -->
-    <section class="panel" aria-label="Navigation">
-      <h2 class="h2">Pages</h2>
-      <ul id="site-pages" class="links" aria-label="Site pages"></ul>
-    </section>
+  <section class="panel" aria-label="Navigation">
+    <h2 class="h2">Pages</h2>
+    <ul id="site-pages" class="links" aria-label="Site pages"></ul>
+  </section>
 
-    <!-- Search -->
-    <section class="panel" aria-label="Site search">
-      <div class="searchRow">
-        <label class="srOnly" for="q">Search</label>
-        <input
-          id="q"
-          name="q"
-          type="search"
-          autocomplete="off"
-          placeholder="Search the site..."
-        />
-        <button id="clear" type="button">Clear</button>
-      </div>
+  <hr class="sectionRule" aria-hidden="true">
 
-      <div class="resultsMeta">
-        <strong><span id="count">0</span></strong> result(s)
-      </div>
+  <section class="panel" aria-label="Site search">
+    <div class="searchRow">
+      <label class="srOnly" for="q">Search</label>
+      <input id="q" name="q" type="search" autocomplete="off" placeholder="Search the site..." />
+      <button id="clear" type="button">Clear</button>
+    </div>
 
-      <ul id="results" class="results" aria-live="polite"></ul>
-    </section>
+    <div class="resultsMeta">
+      <strong><span id="count">0</span></strong> result(s)
+    </div>
 
-    <!-- About -->
-    <section class="panel" aria-label="About">
-      <h2 class="h2">About</h2>
-      <p>
-        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
-        acquainted with me and my work, providing effortless access to my creations including documentaries,
-        books, research, and more. If you're here for the services I provide, please visit the 'Services' page using the menu above.
-      </p>
-    </section>
+    <ul id="results" class="results" aria-live="polite"></ul>
+  </section>
 
-    <footer class="footer footer-center">
-      <p>© <span id="year"></span> Darren Steptoe</p>
-      <p class="footer-links">
-        <a href="./privacy.html">Privacy</a> |
-        <a href="./terms.html">Terms</a> |
-        <a href="./refund.html">Refund</a>
-      </p>
-    </footer>
+  <hr class="sectionRule" aria-hidden="true">
 
-  </main>
+  <section class="panel" aria-label="About">
+    <h2 class="h2">About</h2>
+    <p>
+      I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
+      acquainted with me and my work, providing effortless access to my creations including documentaries,
+      books, research, and more. If you're here for the services I provide, please visit the 'Services' page using the menu above.
+    </p>
+  </section>
 
-  <script src="./search.js"></script>
-  <script src="./nav.js"></script>
-  <script src="./script.js" defer></script>
+  <footer class="footer footer-center">
+    <p>© <span id="year"></span> Darren Steptoe</p>
+    <p class="footer-links">
+      <a href="./privacy.html">Privacy</a> |
+      <a href="./terms.html">Terms</a> |
+      <a href="./refund.html">Refund</a>
+    </p>
+  </footer>
+
+</main>
+
+<script src="./search.js"></script>
+<script src="./nav.js"></script>
+<script src="./script.js" defer></script>
+
 </body>
 </html>
