--- a/index.html
+++ b/index.html
@@ -17,25 +17,22 @@
 </head>
 
 <body class="page-index">
-  
+
   <a class="skip-link" href="#main">Skip to content</a>
-<main class="wrap" id="main">
+  <main class="wrap" id="main">
 
     <header class="header">
       <h1 class="title">Darren Steptoe</h1>
       <p class="sub">Artist • Author • Storyteller</p>
     </header>
 
-    <!-- Pages -->
     <section class="panel" aria-label="Navigation">
       <h2 class="h2">Pages</h2>
       <ul id="site-pages" class="links" aria-label="Site pages"></ul>
     </section>
 
-  <hr class="sectionRule" aria-hidden="true">
+    <hr class="sectionRule" aria-hidden="true">
 
-
-    <!-- Search -->
     <section class="panel" aria-label="Site search">
       <div class="searchRow">
         <label class="srOnly" for="q">Search</label>
@@ -49,39 +46,11 @@
         <button id="clear" type="button">Clear</button>
       </div>
 
-      <div class="resultsMeta">
+      <div id="resultsMeta" class="resultsMeta hidden">
         <strong><span id="count">0</span></strong> result(s)
       </div>
 
-      <ul id="results" class="results" aria-live="polite"></ul>
+      <ul id="results" class="results hidden" aria-live="polite"></ul>
     </section>
 
-  <hr class="sectionRule" aria-hidden="true">
-
-
-    <!-- About -->
-    <section class="panel" aria-label="About">
-      <h2 class="h2">About</h2>
-      <p>
-        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
-        acquainted with me and my work, providing effortless access to my creations including documentaries,
-        books, research, and more. If you're here for the services I provide, please visit the 'Services' page using the menu above.
-      </p>
-    </section>
-
-    <footer class="footer footer-center">
-      <p>© <span id="year"></span> Darren Steptoe</p>
-      <p class="footer-links">
-        <a href="./privacy.html">Privacy</a> |
-        <a href="./terms.html">Terms</a> |
-        <a href="./refund.html">Refund</a>
-      </p>
-    </footer>
-
-  </main>
-
-  <script src="./search.js"></script>
-  <script src="./nav.js"></script>
-  <script src="./script.js" defer></script>
-</body>
-</html>
+    <hr class="sectionRule" aria-hidden="
