--- a/index.html
+++ b/index.html
@@ -53,4 +53,30 @@
       <ul id="results" class="results hidden" aria-live="polite"></ul>
     </section>
 
-    <hr class="sectionRule" aria-hidden="
+    <hr class="sectionRule" aria-hidden="true">
+
+    <section class="panel" aria-label="About">
+      <h2 class="h2">About</h2>
+      <p>
+        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
+        acquainted with me and my work, providing effortless access to my creations including documentaries,
+        books, research, and more. If you're here for the services I provide, please visit the 'Services' page using the menu above.
+      </p>
+    </section>
+
+    <footer class="footer footer-center">
+      <p>© <span id="year"></span> Darren Steptoe</p>
+      <p class="footer-links">
+        <a href="./privacy.html">Privacy</a> |
+        <a href="./terms.html">Terms</a> |
+        <a href="./refund.html">Refund</a>
+      </p>
+    </footer>
+
+  </main>
+
+  <script src="./search.js"></script>
+  <script src="./nav.js"></script>
+  <script src="./script.js" defer></script>
+</body>
+</html>
