--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           name="q"
           type="search"
           autocomplete="off"
+          spellcheck="false"
           placeholder="Search the site..."
         />
         <button id="clear" type="button">Clear</button>
@@ -75,7 +76,7 @@
 
   </main>
 
-  <script src="./search.js"></script>
+  <script src="./search.js" defer></script>
   <script src="./nav.js"></script>
   <script src="./script.js" defer></script>
 </body>
