--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
   <main class="wrap" id="main">
     <header class="header">
       <h1 class="title">Services</h1>
-      <p class="sub">Media production • Campaign consulting</p>
+      <p class="sub">Media production • Consulting</p>
     </header>
 
     <section class="panel" aria-label="Navigation">
@@ -44,27 +44,32 @@
 
     <hr class="sectionRule" aria-hidden="true">
 
-    <section class="panel" aria-label="Media Production">
-      <h2 class="h2">Media Production</h2>
+    <section class="panel" aria-label="Media Production Services">
+      <h2 class="h2">Media Production Services</h2>
+
+      <div class="openRow" aria-label="Availability">
+        <span class="openDot" aria-hidden="true"></span>
+        <span>Open to work</span>
+      </div>
+
       <p>
-        Weddings, events, interviews, and documentary-style work. My focus is clean storytelling, strong audio,
-        and reliable delivery — with clear expectations up front and no surprises later.
+        I provide end-to-end media production services for individuals, organizations, campaigns, and institutions.
       </p>
+
       <ul class="links">
-        <li>Wedding &amp; pre-wedding coverage (packages + add-ons)</li>
-        <li>Event videography (half-day / full-day coverage)</li>
-        <li>Interviews (single-cam or multi-cam)</li>
-        <li>Brand/product/commercial work</li>
-        <li>Editing &amp; post-production support</li>
+        <li>Documentary filmmaking (development, production, post)</li>
+        <li>Video production and editing (short-form, long-form)</li>
+        <li>Event, interview, and field production</li>
+        <li>Script development and story consulting</li>
+        <li>Post-production workflows, color, and delivery</li>
       </ul>
     </section>
 
-    <section class="panel" aria-label="Media Production Example Video">
-      <h2 class="h2">Example</h2>
+    <section class="panel" aria-label="YouTube video">
       <div class="videoWrap">
         <iframe
-          title="YouTube video"
           src="https://www.youtube.com/embed/ycHys4e6s3Q"
+          title="YouTube video"
           loading="lazy"
           referrerpolicy="strict-origin-when-cross-origin"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -74,7 +79,7 @@
     </section>
 
     <section class="panel" aria-label="Campaign Consulting">
-      <h2 class="h2">Campaign Consulting</h2>
+      <h2 class="h2">Political Consulting</h2>
 
       <div class="openRow" aria-label="Availability">
         <span class="openDot" aria-hidden="true"></span>
@@ -82,25 +87,68 @@
       </div>
 
       <p>
-        Practical, field-tested campaign support — from the numbers to the turf to the daily execution.
-        If you need a clean plan, strong infrastructure, and someone who can train a team and run a program,
-        I can help.
+        I support campaigns, committees, and independent candidates with practical, field-tested strategy. If you need a clean plan,
+        strong execution, and someone who can build the infrastructure and train the team, I can help.
       </p>
 
       <ul class="links">
-        <li>Win number + targeting (what it takes to win and who to talk to)</li>
-        <li>Field plan (persuasion → GOTV), universes, turf cutting, staging locations</li>
-        <li>Volunteer &amp; staff training (canvass, phones, packets, data)</li>
-        <li>Scripts, QA, and reporting for each phase</li>
-        <li>Operational support (timeline, staffing, weekly goals)</li>
+        <li>Win number + targeting (what it takes to win, who to talk to, and how often)</li>
+        <li>Field plan (persuasion → GOTV), universes, turf cutting, and staging locations</li>
+        <li>Volunteer &amp; staff training (canvass, phones, data entry, packet build)</li>
+        <li>Scripts and message discipline (doors, phones, texts, digital)</li>
+        <li>GOTV operations (chase, visibility, poll coverage planning)</li>
+        <li>Basic comms support (social content guidance, rapid response structure)</li>
+        <li>Office systems (weekly goals, pipeline, reporting, and accountability)</li>
       </ul>
+    </section>
+
+    <section class="panel" aria-label="Pricing">
+      <h2 class="h2">Pricing</h2>
+      <p class="muted small">Simple ranges to set expectations. Final pricing depends on scope, travel, deliverables, and timeline.</p>
+
+      <h3 class="h3">Wedding Films</h3>
+      <div class="pricingPlain">
+        <div class="pricingLine"><strong>Bronze</strong> — $2,400 <span class="muted small">• up to 6 hours • 5–7 min highlight • 14-day turnaround</span></div>
+        <div class="pricingLine"><strong>Silver</strong> — $3,200 <span class="muted small">• up to 8 hours • full speeches edit • 6–8 min cinematic film</span></div>
+        <div class="pricingLine"><strong>Gold</strong> — $4,200 <span class="muted small">• up to 10 hours • multi-cam ceremony • drone + social teaser</span></div>
+        <div class="pricingLine"><strong>Platinum</strong> — $5,200 <span class="muted small">• up to 12 hours • specialty cameras • ceremony + speeches • 48-hr teaser • 7-day delivery</span></div>
+        <div class="pricingLine"><strong>Additional Hour</strong> — $125 <span class="muted small">• applied beyond the booked package</span></div>
+      </div>
+
+      <h3 class="h3">Event &amp; Promotional</h3>
+      <div class="pricingPlain">
+        <div class="pricingLine"><strong>Half Day</strong> — $600 <span class="muted small">• up to 4 hours • 60–90 sec highlight</span></div>
+        <div class="pricingLine"><strong>Full Day</strong> — $1,000 <span class="muted small">• up to 8 hours • 2–3 min highlight</span></div>
+      </div>
+
+      <h3 class="h3">Corporate &amp; Small Business</h3>
+      <div class="pricingPlain">
+        <div class="pricingLine"><strong>Brand Promo</strong> — $1,200 <span class="muted small">• interview + b-roll • 2–3 min film • social cut</span></div>
+        <div class="pricingLine"><strong>Executive Interview</strong> — $850 <span class="muted small">• up to 2 hours • 1–2 min polished edit</span></div>
+        <div class="pricingLine"><strong>Monthly Content</strong> — from $2,500 <span class="muted small">• 1 filming day • 3–5 edited videos</span></div>
+        <div class="pricingLine"><strong>Custom Package</strong> — quote <span class="muted small">• multi-day / multi-location / recurring</span></div>
+      </div>
+
+      <h3 class="h3">Documentary &amp; Editing</h3>
+      <div class="pricingPlain">
+        <div class="pricingLine"><strong>Editing</strong> — $85/hr <span class="muted small">• 5-hour minimum per project phase</span></div>
+        <div class="pricingLine"><strong>Full Documentary Support</strong> — quote <span class="muted small">• development → post support tailored to scope</span></div>
+      </div>
+
+      <h3 class="h3">Political Consulting</h3>
+      <div class="pricingPlain">
+        <div class="pricingLine"><strong>Strategy Intensive (1 Hour)</strong> — $250 <span class="muted small">• win number, targeting, field plan, next steps</span></div>
+        <div class="pricingLine"><strong>Municipal Retainer</strong> — $3,000–6,000 / month <span class="muted small">• plan + training + reporting cadence</span></div>
+        <div class="pricingLine"><strong>State Legislative Retainer</strong> — $5,000–10,000 / month <span class="muted small">• ops buildout + weekly goals + GOTV</span></div>
+        <div class="pricingLine"><strong>Congressional Retainer</strong> — $10,000–20,000+ / month <span class="muted small">• full-scale field + ops systems</span></div>
+      </div>
     </section>
 
     <hr class="sectionRule" aria-hidden="true">
 
     <section class="panel" aria-label="Smart Intake Form">
       <h2 class="h2">Smart Intake Form</h2>
-      <p class="muted">
+      <p class="muted small">
         Pick a project type and you’ll see the right questions — plus a rough estimate / breakdown.
       </p>
 
@@ -113,187 +161,4 @@
       >
         <label>
           Project Type *
-          <select id="projectType" name="project_type" required>
-            <option value="" selected disabled>Select one…</option>
-            <option value="media">Media Production</option>
-            <option value="consulting">Campaign Consulting</option>
-          </select>
-        </label>
-
-        <div class="formGrid">
-          <label>
-            Name *
-            <input type="text" name="name" autocomplete="name" required>
-          </label>
-
-          <label>
-            Email *
-            <input type="email" name="email" autocomplete="email" required>
-          </label>
-
-          <label>
-            Phone *
-            <input type="tel" name="telephone" autocomplete="tel" inputmode="tel" required>
-          </label>
-
-          <label>
-            Location (City/State)
-            <input type="text" name="location" autocomplete="address-level2">
-          </label>
-        </div>
-
-        <div id="mediaFields" class="subPanel hidden" aria-hidden="true">
-          <h3 class="h3">Media Details</h3>
-
-          <label>
-            Media Type *
-            <select id="mediaType" name="media_type">
-              <option value="" selected disabled>Select one…</option>
-              <option value="wedding">Wedding &amp; Pre-Wedding</option>
-              <option value="event">Event Videography</option>
-              <option value="interview">Interview</option>
-              <option value="commercial">Product &amp; Commercial</option>
-              <option value="architecture">Architectural &amp; Interior</option>
-              <option value="editing">Editing / Post-production</option>
-              <option value="other">Other</option>
-            </select>
-          </label>
-
-          <div class="formGrid">
-            <label>
-              Date (or target date) *
-              <input id="mediaDate" type="date" name="media_date">
-            </label>
-
-            <label id="coverageHoursWrap" class="hidden">
-              Coverage Hours (estimate)
-              <input id="coverageHours" type="number" name="coverage_hours" inputmode="numeric" min="1" step="1" placeholder="e.g., 6">
-            </label>
-          </div>
-
-          <label id="weddingPackageWrap" class="hidden">
-            Wedding Package *
-            <select id="weddingPackage" name="wedding_package">
-              <option value="" selected disabled>Select one…</option>
-              <option value="bronze">Bronze</option>
-              <option value="silver">Silver</option>
-              <option value="gold">Gold</option>
-              <option value="platinum">Platinum</option>
-            </select>
-          </label>
-
-          <label>
-            Deliverables / What you want
-            <textarea id="deliverables" name="deliverables" rows="4" placeholder="What should the final deliverable look like? (length, style, number of videos, audio needs, etc.)"></textarea>
-          </label>
-
-          <label id="otherDetailsWrap" class="hidden">
-            Describe what you’re looking for *
-            <textarea id="otherDetails" name="other_details" rows="4" placeholder="Type here…"></textarea>
-          </label>
-        </div>
-
-        <div id="consultingFields" class="subPanel hidden" aria-hidden="true">
-          <h3 class="h3">Consulting Details</h3>
-
-          <label>
-            Engagement Type *
-            <select id="consultingEngagement" name="consulting_engagement">
-              <option value="" selected disabled>Select one…</option>
-              <option value="one_hour">1-hour strategy call</option>
-              <option value="project">Project support (specific deliverables)</option>
-              <option value="retainer">Monthly support / retainer</option>
-              <option value="training">Training (staff/volunteers)</option>
-              <option value="other">Other</option>
-            </select>
-          </label>
-
-          <div class="formGrid">
-            <label id="monthsWrap" class="hidden">
-              How many months?
-              <input id="months" type="number" name="months" inputmode="numeric" min="1" step="1" placeholder="e.g., 3">
-            </label>
-          </div>
-
-          <label>
-            What do you need help with? *
-            <textarea name="consulting_needs" rows="5" placeholder="Win number, targeting, field plan, turf cutting, training, scripts, ops, timeline, etc."></textarea>
-          </label>
-        </div>
-
-        <div class="subPanel" aria-label="Rough estimate">
-          <h3 class="h3">Rough estimate / breakdown</h3>
-          <p id="quoteText" class="quoteText">Select a project type to see a rough estimate.</p>
-          <p class="muted small">
-            This is a quick directional estimate based on what you select here. Final pricing depends on scope,
-            travel, deliverables, and timeline.
-          </p>
-        </div>
-
-        <label>
-          Anything else to share?
-          <textarea name="notes" rows="4" placeholder="Timeline, constraints, links, references, preferred style, etc."></textarea>
-        </label>
-
-        <label>
-          Promo Code
-          <input type="text" name="promo_code" autocomplete="off">
-        </label>
-
-        <div class="hp" aria-hidden="true">
-          <label>
-            Leave this field empty
-            <input type="text" name="_gotcha" tabindex="-1" autocomplete="off">
-          </label>
-        </div>
-
-        <button id="submitBtn" type="submit">Send</button>
-        <p id="formStatus" class="formStatus" role="status" aria-live="polite"></p>
-      </form>
-    </section>
-
-    <hr class="sectionRule" aria-hidden="true">
-
-    <section class="panel" aria-label="Schedule">
-      <h2 class="h2">Schedule</h2>
-      <p class="muted">
-        Pick a time that works. If you’re booking consulting, include the race/organization and a short note on what you need.
-      </p>
-
-      <div
-        class="calendly-inline-widget calendly-frame"
-        data-url="https://calendly.com/me--ujg"
-        style="min-width:320px;height:720px;"
-      ></div>
-      <script async src="https://assets.calendly.com/assets/external/widget.js"></script>
-    </section>
-
-    <hr class="sectionRule" aria-hidden="true">
-
-    <section class="panel" aria-label="Payment">
-      <h2 class="h2">Payment</h2>
-      <p class="muted">If you already have an invoice or agreement, you can pay here.</p>
-      <p>
-        <a class="button" href="https://pay.darrensteptoe.com/b/8x26oJ1DL6vHcraft02Fa00" rel="noopener">Pay Now</a>
-      </p>
-    </section>
-
-    <footer class="footer">
-      <p class="copyright">
-        © <span id="year"></span> Darren Steptoe
-      </p>
-      <p class="fineprint">
-        <a href="./privacy.html">Privacy</a>
-        <span aria-hidden="true"> · </span>
-        <a href="./terms.html">Terms</a>
-        <span aria-hidden="true"> · </span>
-        <a href="./refund.html">Refunds</a>
-      </p>
-    </footer>
-  </main>
-
-  <script src="./nav.js"></script>
-  <script src="./services-form.js"></script>
-  <script src="./script.js"></script>
-</body>
-</html>
+          <select id="project
