--- a/services.html
+++ b/services.html
@@ -161,4 +161,201 @@
       >
         <label>
           Project Type *
-          <select id="project
+          <select id="projectType" name="project_type" required>
+            <option value="" selected disabled>Select one…</option>
+            <option value="media">Media Production</option>
+            <option value="consulting">Campaign Consulting</option>
+          </select>
+        </label>
+
+        <div class="formGrid">
+          <label>
+            Name *
+            <input type="text" name="name" autocomplete="name" required>
+          </label>
+
+          <label>
+            Email *
+            <input type="email" name="email" autocomplete="email" required>
+          </label>
+
+          <label>
+            Phone *
+            <input type="tel" name="telephone" autocomplete="tel" inputmode="tel" required>
+          </label>
+
+          <label>
+            Location (City/State)
+            <input type="text" name="location" autocomplete="address-level2">
+          </label>
+        </div>
+
+        <div id="mediaFields" class="subPanel hidden" aria-hidden="true">
+          <h3 class="h3">Media Details</h3>
+
+          <label>
+            Media Type *
+            <select id="mediaType" name="media_type">
+              <option value="" selected disabled>Select one…</option>
+              <option value="wedding">Wedding &amp; Pre-Wedding</option>
+              <option value="event">Event Videography</option>
+              <option value="interview">Interview</option>
+              <option value="commercial">Product &amp; Commercial</option>
+              <option value="architecture">Architectural &amp; Interior</option>
+              <option value="editing">Editing / Post-production</option>
+              <option value="other">Other</option>
+            </select>
+          </label>
+
+          <div class="formGrid">
+            <label>
+              Date (or target date) *
+              <input id="mediaDate" type="date" name="media_date">
+            </label>
+
+            <label id="coverageHoursWrap" class="hidden">
+              Coverage Hours (estimate)
+              <input id="coverageHours" type="number" name="coverage_hours" inputmode="numeric" min="1" step="1" placeholder="e.g., 6">
+            </label>
+          </div>
+
+          <label id="weddingPackageWrap" class="hidden">
+            Wedding Package *
+            <select id="weddingPackage" name="wedding_package">
+              <option value="" selected disabled>Select one…</option>
+              <option value="bronze">Bronze</option>
+              <option value="silver">Silver</option>
+              <option value="gold">Gold</option>
+              <option value="platinum">Platinum</option>
+            </select>
+          </label>
+
+          <label>
+            Details / Deliverables
+            <textarea id="deliverables" name="deliverables" rows="5" placeholder="Location, deliverables, vibe, audio needs, runtime, references, etc."></textarea>
+          </label>
+
+          <label id="otherDetailsWrap" class="hidden">
+            Describe what you’re looking for *
+            <textarea id="otherDetails" name="other_details" rows="4" placeholder="Type here…"></textarea>
+          </label>
+        </div>
+
+        <div id="consultingFields" class="subPanel hidden" aria-hidden="true">
+          <h3 class="h3">Consulting Details</h3>
+
+          <label>
+            Engagement Type *
+            <select id="consultingEngagement" name="consulting_engagement">
+              <option value="" selected disabled>Select one…</option>
+              <option value="one_hour">Strategy intensive (1 hour)</option>
+              <option value="project">Project support (scoped deliverables)</option>
+              <option value="retainer">Monthly support / retainer</option>
+              <option value="training">Training (staff/volunteers)</option>
+              <option value="other">Other</option>
+            </select>
+          </label>
+
+          <div class="formGrid">
+            <label id="monthsWrap" class="hidden">
+              How many months?
+              <input id="months" type="number" name="months" inputmode="numeric" min="1" step="1" placeholder="e.g., 3">
+            </label>
+          </div>
+
+          <label>
+            What do you need help with? *
+            <textarea name="consulting_needs" rows="5" placeholder="Win number, targeting, field plan, turf cutting, training, scripts, ops, timeline, etc."></textarea>
+          </label>
+        </div>
+
+        <div class="subPanel" aria-label="Rough estimate">
+          <h3 class="h3">Rough estimate / breakdown</h3>
+          <p id="quoteText" class="quoteText">Select a project type to see a rough estimate.</p>
+          <p class="muted small">
+            Directional estimate only. Final pricing depends on scope, travel, deliverables, and timeline.
+          </p>
+        </div>
+
+        <label>
+          Anything else to share?
+          <textarea name="notes" rows="4" placeholder="Timeline, constraints, links, references, preferred style, etc."></textarea>
+        </label>
+
+        <label>
+          Promo Code
+          <input type="text" name="promo_code" autocomplete="off">
+        </label>
+
+        <div class="hp" aria-hidden="true">
+          <label>
+            Leave this field empty
+            <input type="text" name="_gotcha" tabindex="-1" autocomplete="off">
+          </label>
+        </div>
+
+        <button id="submitBtn" type="submit">Send</button>
+        <p id="formStatus" class="formStatus" role="status" aria-live="polite"></p>
+      </form>
+    </section>
+
+    <hr class="sectionRule" aria-hidden="true">
+
+    <section class="panel panelHasCornerLogo" aria-label="Schedule">
+      <h2 class="h2">Schedule</h2>
+
+      <img
+        src="./assets/Calendly_logo.png"
+        alt="Calendly"
+        class="panelLogo"
+      />
+
+      <div
+        class="calendly-inline-widget calendly-frame"
+        data-url="https://calendly.com/me--ujg"
+        style="min-width:320px;height:720px;"
+      ></div>
+
+      <script async src="https://assets.calendly.com/assets/external/widget.js"></script>
+    </section>
+
+    <hr class="sectionRule" aria-hidden="true">
+
+    <section class="panel panelHasCornerLogo" aria-label="Payment">
+      <h2 class="h2">Payment</h2>
+
+      <img
+        src="./assets/Stripe_Logo,_revised_2016.svg.png"
+        alt="Stripe"
+        class="panelLogo"
+      />
+
+      <p>
+        For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, or Google Pay.
+      </p>
+      <p>
+        <a
+          href="https://pay.darrensteptoe.com/b/8x26oJ1DL6vHcraft02Fa00"
+          target="_blank"
+          rel="noopener"
+        >
+          Pay Invoice ↗
+        </a>
+      </p>
+    </section>
+
+    <footer class="footer footer-center">
+      <p>© <span id="year"></span> Darren Steptoe</p>
+      <p class="footer-links">
+        <a href="./privacy.html">Privacy</a> |
+        <a href="./terms.html">Terms</a> |
+        <a href="./refund.html">Refund</a>
+      </p>
+    </footer>
+  </main>
+
+  <script src="./services-form.js" defer></script>
+  <script src="./nav.js" defer></script>
+  <script src="./script.js" defer></script>
+</body>
+</html>
