--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <link rel="manifest" href="./manifest.webmanifest" />
   <link rel="icon" href="./assets/img/icon-192.png" />
   <link rel="apple-touch-icon" href="./assets/img/icon-192.png" />
+
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; img-src 'self' data: https:; style-src 'self'; script-src 'self' https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com; frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com; form-action 'self' https://formspree.io; upgrade-insecure-requests" />
 </head>
 
 <body class="page-index">
-
   <a class="skip-link" href="#main">Skip to content</a>
-  <main class="wrap" id="main">
 
+  <main class="wrap" id="main">
     <header class="header">
       <h1 class="title">Darren Steptoe</h1>
       <p class="sub">Artist • Author • Storyteller</p>
@@ -73,11 +73,10 @@
         <a href="./refund.html">Refund</a>
       </p>
     </footer>
-
   </main>
 
   <script src="./search.js" defer></script>
-  <script src="./nav.js"></script>
+  <script src="./nav.js" defer></script>
   <script src="./script.js" defer></script>
 </body>
 </html>
