--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Work — Darren Steptoe</title>
-  <meta name="description" content="Selected projects and experience." />
+  <meta name="description" content="Selected film, documentary, and creative work by Darren Steptoe." />
   <link rel="stylesheet" href="./styles.css" />
 
   <meta name="referrer" content="strict-origin-when-cross-origin" />
@@ -13,120 +13,96 @@
   <link rel="manifest" href="./manifest.webmanifest" />
   <link rel="icon" href="./assets/img/icon-192.png" />
   <link rel="apple-touch-icon" href="./assets/img/icon-192.png" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; img-src 'self' data: https:; style-src 'self'; script-src 'self' https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com; frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com; form-action 'self' https://formspree.io; upgrade-insecure-requests" />
+
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self';
+    base-uri 'self';
+    object-src 'none';
+    frame-ancestors 'none';
+    img-src 'self' data: https:;
+    style-src 'self';
+    script-src 'self' https://assets.calendly.com;
+    connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com;
+    frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com;
+    form-action 'self' https://formspree.io;
+    upgrade-insecure-requests" />
 </head>
 
 <body class="page-work">
-  
   <a class="skip-link" href="#main">Skip to content</a>
-<main class="wrap" id="main">
 
+  <main class="wrap" id="main">
     <header class="header">
       <h1 class="title">Work</h1>
-      <p class="sub">Selected projects and experience</p>
+      <p class="sub">Film • Documentary • Production</p>
     </header>
 
-    <section class="panel">
+    <section class="panel" aria-label="Navigation">
       <h2 class="h2">Pages</h2>
       <ul id="site-pages" class="links" aria-label="Site pages"></ul>
     </section>
 
-  <hr class="sectionRule" aria-hidden="true">
+    <hr class="sectionRule" aria-hidden="true">
 
-
-    <section class="panel sectionHeader">
-      <h2 class="h2">Documentary Work</h2>
-    </section>
-
-    <section class="panel">
-      <a
-        class="imdbLink"
-        href="https://www.imdb.com/name/nm12602714/"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        <div class="imdbBadge">IMDb</div>
-
-        <div class="imdbContent">
-          <div class="imdbTitleRow">
-            <h2 class="imdbTitle">Darren Steptoe — IMDb</h2>
-            <span class="imdbChip">Film credits</span>
-          </div>
-
-          <div class="imdbMeta">
-            <span>Producer</span><span>•</span>
-            <span>Writer</span><span>•</span>
-            <span>Editor</span>
-          </div>
-
-          <p class="imdbDesc">
-            Selected credits and projects across documentary and narrative work.
-          </p>
-
-          <div class="imdbCta">Open profile ↗</div>
-        </div>
-      </a>
-    </section>
-
-    <section class="panel">
-      <p>
-        <b>The Last to Know (2022)</b><br />
-        Join 89-year-old retired educator and community activist,
-        Dr. Opal Lee (often referred to as the “Grandmother of Juneteenth”), as she
-        begins a years-long campaign to make her vision of Juneteenth becoming a
-        federally-recognized holiday a reality.
-      </p>
+    <section class="panel" aria-label="Featured Documentary">
+      <h2 class="h2">Featured Documentary</h2>
 
       <p>
-        My Roles: Co-producer, Co-writer, Editor<br />
-        Released: March 19, 2022<br />
-        Directed by Erica Stevenson
+        I co-produced, co-wrote, and edited a feature documentary following 89-year-old retired educator
+        and 2022 Nobel Peace Prize nominee Dr. Opal Lee, often referred to as the “Grandmother of Juneteenth.”
       </p>
 
       <ul class="links">
-        <li>🏆 Founder’s Best Story Award — The African Film Festival (TAFF)</li>
-        <li>🏆 Audience Award for Best Documentary — The Black Film Summit</li>
-        <li>Nominee, Best Editing — Oregon Documentary Film Festival</li>
+        <li>Founder’s Best Story Award — The African Film Festival (TAFF)</li>
+        <li>Audience Award for Best Documentary — The Black Film Summit</li>
+        <li>Nominated for Best Editing — Oregon Documentary Film Festival</li>
       </ul>
-    </section>
 
-    <section class="panel">
       <div class="videoWrap">
         <iframe
           src="https://www.youtube.com/embed/ycHys4e6s3Q"
-          title="Documentary video"
+          title="Documentary trailer"
+          loading="lazy"
+          referrerpolicy="strict-origin-when-cross-origin"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
         ></iframe>
       </div>
     </section>
 
-  <hr class="sectionRule" aria-hidden="true">
+    <hr class="sectionRule" aria-hidden="true">
 
+    <section class="panel" aria-label="Film & Production Work">
+      <h2 class="h2">Film & Production</h2>
 
-    <section class="panel sectionHeader">
-      <h2 class="h2">Academic and Institutional Work</h2>
+      <p>
+        My work spans long-form documentary, field production, interview-driven storytelling, and post-production.
+        I focus on clarity, pacing, and emotional through-line — without overproduction.
+      </p>
+
+      <ul class="links">
+        <li>Documentary development and editing</li>
+        <li>Interview production and multi-camera setups</li>
+        <li>Field shooting and event capture</li>
+        <li>Story consulting and structural editing</li>
+        <li>Color correction and final delivery workflows</li>
+      </ul>
     </section>
 
-    <section class="panel">
+    <hr class="sectionRule" aria-hidden="true">
+
+    <section class="panel" aria-label="Academic & Institutional Work">
+      <h2 class="h2">Academic & Institutional Work</h2>
+
       <p>
-        <b>Homeless PhotoVoice Project</b><br />
-        During my AmeriCorps VISTA service with the Homeless Coalition of Hillsborough County, I developed and led the Homeless PhotoVoice Project, a community-based applied sociology initiative. I designed the project and approached University of Tampa professor Norma Winston to integrate it into her Applied Sociology course.
+        As an AmeriCorps VISTA, I developed and implemented a structured community-engagement project
+        in partnership with a university professor and applied sociology course. The program was
+        later featured in a textbook on national service and volunteerism.
       </p>
 
       <p>
-        The project became a core part of the curriculum, engaging students in fieldwork, media coordination, and a public PhotoVoice showcase focused on homelessness in Tampa.
-      </p>
-
-      <p>
-        The project was later documented as a case example in
-        <a
-          href="https://www.bloomsbury.com/us/national-service-and-volunteerism-9780739196946/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          National Service and Volunteerism (Bloomsbury) ↗
-        </a>.
+        My role included concept development, curriculum coordination, institutional buy-in,
+        implementation strategy, and execution.
       </p>
     </section>
 
@@ -138,10 +114,9 @@
         <a href="./refund.html">Refund</a>
       </p>
     </footer>
-
   </main>
 
-    <script src="./nav.js"></script>
+  <script src="./nav.js" defer></script>
   <script src="./script.js" defer></script>
 </body>
 </html>
