--- a/writing.html
+++ b/writing.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Writing — Darren Steptoe</title>
-  <meta name="description" content="Writing by Darren Steptoe." />
+  <meta name="description" content="Writing projects by Darren Steptoe." />
   <link rel="stylesheet" href="./styles.css" />
 
   <meta name="referrer" content="strict-origin-when-cross-origin" />
@@ -13,128 +13,87 @@
   <link rel="manifest" href="./manifest.webmanifest" />
   <link rel="icon" href="./assets/img/icon-192.png" />
   <link rel="apple-touch-icon" href="./assets/img/icon-192.png" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; img-src 'self' data: https:; style-src 'self'; script-src 'self' https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com; frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com; form-action 'self' https://formspree.io; upgrade-insecure-requests" />
+
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self';
+    base-uri 'self';
+    object-src 'none';
+    frame-ancestors 'none';
+    img-src 'self' data: https:;
+    style-src 'self';
+    script-src 'self' https://assets.calendly.com;
+    connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com;
+    frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com;
+    form-action 'self' https://formspree.io;
+    upgrade-insecure-requests" />
 </head>
 
 <body class="page-writing">
-  
   <a class="skip-link" href="#main">Skip to content</a>
-<main class="wrap" id="main">
 
+  <main class="wrap" id="main">
     <header class="header">
       <h1 class="title">Writing</h1>
-      <p class="sub">Forthcoming work and excerpts</p>
+      <p class="sub">Books • Essays • Works in progress</p>
     </header>
 
-    <!-- Pages -->
     <section class="panel" aria-label="Navigation">
       <h2 class="h2">Pages</h2>
       <ul id="site-pages" class="links" aria-label="Site pages"></ul>
     </section>
 
-  <hr class="sectionRule" aria-hidden="true">
+    <hr class="sectionRule" aria-hidden="true">
 
+    <section class="panel" aria-label="Institutional Clarity Series">
+      <h2 class="h2">Institutional Clarity Series</h2>
+      <p>
+        A nonfiction series about how institutions shape what we believe, what we reward, and what we call “truth.”
+        The goal is practical clarity: how to think cleanly, communicate plainly, and design systems that don’t quietly
+        punish good intentions.
+      </p>
 
-    <!-- Book -->
-    <section class="panel bookGroup" aria-label="When Good Intentions Fail">
-      <div class="bookGroupHead">
-        <p class="bookGroupTitle">Forthcoming</p>
-      </div>
+      <h3 class="h3">Book 1 — What Is Reliable Knowledge?</h3>
+      <p class="muted small">
+        A framework for deciding what to trust — and why — across media, politics, institutions, and everyday life.
+      </p>
 
-      <div class="bookStack">
+      <h3 class="h3">Book 2 — When Good Intentions Fail</h3>
+      <p class="muted small">
+        How incentives, friction, and organizational structure can overwhelm moral intent — and what to do about it.
+      </p>
 
-        <div class="bookCard">
-          <div class="bookTopRow">
-            <div>
-              <h2 class="bookName">When Good Intentions Fail</h2>
-              <p class="bookTagline"><em>How Institutions Quietly Transfer Burden</em></p>
-            </div>
+      <h3 class="h3">Book 3 — What Design Decides</h3>
+      <p class="muted small">
+        How design choices (in policy, software, organizations, and public systems) turn values into outcomes.
+      </p>
+    </section>
 
-            <div class="coverPh comingSoon" aria-label="Book cover coming soon">
-              <svg viewBox="0 0 300 450" role="img">
-                <defs>
-                  <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-                    <stop offset="0" stop-color="rgba(255,255,255,.08)"/>
-                    <stop offset="1" stop-color="rgba(255,255,255,.02)"/>
-                  </linearGradient>
-                </defs>
+    <hr class="sectionRule" aria-hidden="true">
 
-                <rect x="10" y="10" width="280" height="430" rx="14"
-                  fill="url(#g)" stroke="rgba(255,255,255,.12)" />
+    <section class="panel" aria-label="Updates and Early Access">
+      <h2 class="h2">Updates &amp; Early Access</h2>
+      <p>
+        If you want updates on releases, drafts, or early access, use the Contact page. I’ll keep it simple and low-noise.
+      </p>
+      <p>
+        <a href="./services.html">Go to Services / Contact →</a>
+      </p>
+    </section>
 
-                <text x="150" y="225" text-anchor="middle"
-                  fill="rgba(255,255,255,.55)"
-                  font-size="18"
-                  letter-spacing=".14em"
-                  font-family="system-ui, -apple-system, Segoe UI, Roboto, Arial">
-                  COMING SOON
-                </text>
-              </svg>
-            </div>
-          </div>
-        </div>
+    <hr class="sectionRule" aria-hidden="true">
 
-        <div class="bookCard tight">
-          <h3 class="h3">Back Cover</h3>
-          <p>
-            Values-driven institutions often look humane on the surface: careful language,
-            collaborative norms, and a shared sense of mission. But when roles, authority,
-            and decision-making stay unfinished, responsibility doesn’t disappear.
-          </p>
-          <p>
-            It relocates into ambiguity, informal expectations, and the people most willing
-            to carry the load. Over time, “being reliable” becomes a job requirement. Exhaustion
-            becomes normal. And the system keeps functioning precisely because someone keeps compensating.
-          </p>
-          <p>
-            <strong>When Good Intentions Fail</strong> names the pattern clearly—without drama—and gives readers
-            a way to recognize where the burden went, why it landed there, and how to stop mistaking personal
-            strain for personal failure.
-          </p>
-        </div>
-
-        <div class="bookCard tight">
-          <h3 class="h3">Excerpt</h3>
-          <p>
-            Most institutions begin with language—mission statements, values decks, guiding principles.
-            Early on, those words attract people who care and create a sense of shared purpose.
-          </p>
-          <p>
-            But eventually, values have to become structure: roles, authority, process, and protection.
-            When that translation never fully happens, values start doing work they were never designed to do.
-          </p>
-          <p>
-            <em>“Values can guide decisions. They cannot carry them.”</em>
-          </p>
-        </div>
-
-        <div class="bookCard tight">
-          <h3 class="h3">Early Reader Feedback</h3>
-          <p class="testimonial">
-            “Bravo! Excellent read—extremely relatable, without being emotionally heavy.”
-            <span>— Harmony</span>
-          </p>
-          <p class="testimonial">
-            “You are a very good writer. I’m impressed by how effective your sentences are—enough words to
-            make an interesting point, but not overly flowery.”
-            <span>— Griffith</span>
-          </p>
-        </div>
-
-        <div class="bookCard tight">
-          <h3 class="h3">Release Notes</h3>
-          <p>The book is currently unpublished.</p>
-          <p>
-            <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSd6dzvBJ4JIcK7pOP0wM3skn8f-k69Vi5kWyw5NfNr6HsIw5w/viewform?usp=publish-editor"
-              target="_blank"
-              rel="noopener noreferrer">
-              Get notified when it's released ↗
-            </a>
-          </p>
-        </div>
-
-      </div>
+    <section class="panel" aria-label="Short writing">
+      <h2 class="h2">Short Writing</h2>
+      <p>
+        I’m building a public library of short pieces — quick, readable essays that test ideas before they become chapters.
+        The tone is practical and direct: what I think, why I think it, and what it implies.
+      </p>
+      <ul class="links">
+        <li>Clarity notes (short conceptual tools)</li>
+        <li>Campaign notes (field-tested lessons)</li>
+        <li>Media notes (story structure and editing craft)</li>
+      </ul>
+      <p class="muted small">More public writing will be added here as it’s published.</p>
     </section>
 
     <footer class="footer footer-center">
@@ -145,10 +104,9 @@
         <a href="./refund.html">Refund</a>
       </p>
     </footer>
-
   </main>
 
-    <script src="./nav.js"></script>
+  <script src="./nav.js" defer></script>
   <script src="./script.js" defer></script>
 </body>
 </html>
