--- a/services.html
+++ b/services.html
@@ -264,7 +264,7 @@
         <div class="pricingCard">
           <h4>Bronze — $2,400</h4>
           <ul>
-            <li>Up to 6 hours</li>
+            <li>Up to 6 hours*</li>
             <li>5–7 min highlight film</li>
             <li>14-day turnaround</li>
           </ul>
@@ -273,7 +273,7 @@
         <div class="pricingCard">
           <h4>Silver — $3,200</h4>
           <ul>
-            <li>Up to 8 hours</li>
+            <li>Up to 8 hours*</li>
             <li>Full speeches edit</li>
             <li>6–8 min cinematic film</li>
           </ul>
@@ -282,7 +282,7 @@
         <div class="pricingCard">
           <h4>Gold — $4,200</h4>
           <ul>
-            <li>Up to 10 hours</li>
+            <li>Up to 10 hours*</li>
             <li>Multi-cam ceremony</li>
             <li>Drone + social teaser</li>
           </ul>
@@ -291,7 +291,7 @@
         <div class="pricingCard">
           <h4>Platinum — $5,200</h4>
           <ul>
-            <li>Up to 12 hours</li>
+            <li>Up to 12 hours*</li>
             <li>Specialty cameras</li>
             <li>Ceremony + speeches</li>
             <li>48-hr teaser</li>
@@ -300,7 +300,7 @@
         </div>
       </div>
 
-      <p class="miniNote">Additional hour: $125 (applies beyond the booked package)</p>
+      <p class="miniNote"><br />*Additional hour: $125 (applies beyond the booked package)</p>
 
       <h3>Event &amp; Promotional</h3>
       <div class="pricingGrid twoCol" aria-label="Event pricing">
