--- a/services.html
+++ b/services.html
@@ -300,7 +300,7 @@
         </div>
       </div>
 
-      <p class="miniNote"><br />*Additional hour: $125 (applies beyond the booked package)</p>
+      <p class="miniNote"><br /><i></i>*Additional hour: $125 (applies beyond the booked package)</i></p>
 
       <h3>Event &amp; Promotional</h3>
       <div class="pricingGrid twoCol" aria-label="Event pricing">
