--- a/services.html
+++ b/services.html
@@ -149,7 +149,7 @@
 
       <div class="pricingGrid" aria-label="Wedding add-ons">
         <div class="pricingCard">
-          <h4>Additional hour — $125</h4>
+          <h4>Additional Hour — $125</h4>
           <ul>
             <li>Applies beyond the booked package</li>
           </ul>
@@ -258,6 +258,8 @@
         </div>
       </div>
     </section>
+
+    <hr class="sectionRule" aria-hidden="true">
 
     <section class="panel" aria-label="Smart Intake Form">
       <h2 class="h2">Smart Intake Form</h2>
@@ -412,6 +414,8 @@
       </form>
     </section>
 
+    <hr class="sectionRule" aria-hidden="true">
+
     <section class="panel" aria-label="Schedule">
       <div class="panelHeaderRow">
         <h2 class="h2">Schedule</h2>
@@ -426,6 +430,8 @@
 
       <script async src="https://assets.calendly.com/assets/external/widget.js"></script>
     </section>
+
+    <hr class="sectionRule" aria-hidden="true">
 
     <section class="panel" aria-label="Payment">
       <div class="panelHeaderRow">
