--- a/services.html
+++ b/services.html
@@ -145,9 +145,7 @@
             <li>7-day delivery</li>
           </ul>
         </div>
-      </div>
 
-      <div class="pricingGrid twoCol" aria-label="Wedding add-ons">
         <div class="pricingCard">
           <h4>Additional Hour — $125</h4>
           <ul>
@@ -394,7 +392,7 @@
 
         <label>
           Anything else to share?
-          <textarea name="notes" rows="4" placeholder="Timeline, constraints, links, references, preferred style, etc."></textarea>
+          <textarea name="notes" rows="4" placeholder="Timeline, constraints, links, references, preferred style, audio needs, runtime, references, etc."></textarea>
         </label>
 
         <label>
