--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
       </p>
     </section>
 
+    <hr class="sectionRule" aria-hidden="true">
+
+    <section class="panel" aria-label="Featured Image">
+      <div class="featured-image-container">
+        <img src="./assets/img/scoreboard.jpg" alt="Darren Steptoe at baseball field with scoreboard backdrop" />
+      </div>
+    </section>
+
     <footer class="footer footer-center">
       <p>© <span id="year"></span> Darren Steptoe</p>
       <p class="footer-links">
