--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <section class="panel" aria-label="Featured Image">
       <div class="featured-image-container">
-        <img src="./assets/img/scoreboard.jpg" alt="Darren Steptoe at baseball field with scoreboard backdrop" />
+        <img src="./assets/scoreboard.jpg" alt="Darren Steptoe at baseball field with scoreboard backdrop" />
       </div>
     </section>
 
